# IMUProcessor

./: CMakeLists.txt
Tools/: euler.txt  euler_postprocess.txt  euler_raw.txt  plot_euler.py  plot_imu.py  v_a.txt
data/: euler.txt  euler_auto_raw_20170816.txt  euler_integrated_20170816.txt  euler_integrated_auto_20170816.txt  euler_raw_20170816.txt  quaternion.txt  t_v_a_auto_2016.txt
include/: DataStructure.h  IMUProcessor.h
src/: IMUProcessor.cpp  main.cpp
